# bottom-line

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build-wasm.sh  contributing.md  crates.js  flake.nix  help.html  index.html  settings.html  src-files.js
game/: Cargo.toml  all.html  index.html  sidebar-items.js  static.SHARED_TS_DIR.html
game/benches/: benchmarks.rs
game/cards/: enum.DataParseError.html  enum.MarketEventDetails.html  index.html  sidebar-items.js  struct.AssetCard.html  struct.DeckList.html  struct.EventCard.html  struct.GameData.html  struct.LiabilityCard.html  struct.LoadedCards.html  struct.LoadedCardsMetadata.html  struct.MarketEventCard.html  struct.MarketStatusCard.html
game/errors/: enum.AssetAbilityError.html  enum.BankerTargetSelectError.html  enum.DivestAssetError.html  enum.DrawCardError.html  enum.FireCharacterError.html  enum.GameError.html  enum.GetBonusCashError.html  enum.GiveBackCardError.html  enum.LobbyError.html  enum.PayBankerError.html  enum.PlayCardError.html  enum.RedeemLiabilityError.html  enum.SelectingCharactersError.html  enum.SwapError.html  enum.TerminateCreditCharacterError.html  index.html  sidebar-items.js
game/game/: constant.ASSETS_FOR_END_OF_GAME.html  constant.STARTING_GOLD.html  enum.GameState.html  enum.MarketCondition.html  fn.default_backup_deck.html  index.html  sidebar-items.js  struct.AssetLiabilityCount.html  struct.BankerTargetRound.html  struct.Deck.html  struct.Event.html  struct.HandsAfterSwap.html  struct.IssuedLiabilityToPayBanker.html  struct.Lobby.html  struct.Market.html  struct.MarketChange.html  struct.ObtainingCharacters.html  struct.PickableCharacters.html  struct.PlayerPlayedCard.html  struct.PlayerScore.html  struct.Players.html  struct.Results.html  struct.Round.html  struct.SelectedAssetsAndLiabilities.html  struct.SelectingCharacters.html  struct.SoldAssetToPayBanker.html  struct.TurnEnded.html
game/player/: enum.AssetPowerup.html  enum.CardType.html  enum.Character.html  enum.Color.html  enum.LiabilityType.html  index.html  sidebar-items.js  struct.Asset.html  struct.BankerTargetPlayer.html  struct.ChangeAssetColorData.html  struct.DivestAsset.html  struct.DivestPlayer.html  struct.Liability.html  struct.LobbyPlayer.html  struct.PayBankerPlayer.html  struct.PlayableAssets.html  struct.PlayerId.html  struct.PlayerInfo.html  struct.RegulatorSwapPlayer.html  struct.ResultsPlayer.html  struct.RoundPlayer.html  struct.SelectingCharactersPlayer.html  struct.SilverIntoGoldData.html  struct.ToggleChangeAssetColor.html  struct.ToggleSilverIntoGold.html  trait.GetPlayerInfo.html
game/src/: cards.rs  errors.rs  game.rs  lib.rs  player.rs  utility.rs
game/utility/: index.html  sidebar-items.js
responses/: Cargo.toml  all.html  enum.Connect.html  enum.DirectResponse.html  enum.FrontendRequest.html  enum.ResponseError.html  enum.ResyncData.html  enum.RoomCloseReason.html  enum.UniqueResponse.html  index.html  sidebar-items.js
responses/src/: lib.rs
server/: Cargo.toml  all.html  index.html  sidebar-items.js
server/request_handler/: fn.change_asset_color.html  fn.confirm_asset_ability.html  fn.create_selected_cards_response.html  fn.divest_asset.html  fn.draw_card.html  fn.end_turn.html  fn.fire_character.html  fn.get_bonus_cash.html  fn.minus_into_plus.html  fn.pay_banker.html  fn.play_card.html  fn.put_back_card.html  fn.redeem_liability.html  fn.resync.html  fn.select_character.html  fn.select_divest_asset.html  fn.select_issue_liability.html  fn.silver_into_gold.html  fn.start_game.html  fn.swap_with_deck.html  fn.swap_with_player.html  fn.terminate_credit_character.html  fn.turn_starts.html  fn.unselect_divest_asset.html  fn.unselect_issue_liability.html  fn.use_ability.html  index.html  sidebar-items.js  struct.InternalResponse.html  struct.Response.html
server/rooms/: index.html  sidebar-items.js  struct.RoomState.html
server/server/: fn.create_room.html  fn.send_external.html  fn.setupsocket.html  (+6 more)
wasm-responses/: Cargo.toml
(+409 files in other folders)
