[package]
name = "bottom-line"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
either = { version = "1.15.0", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

axum = { version = "0.8.6", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }