[workspace]
members = ["game", "server"]
resolver = "2"

default-members = ["server"]

[workspace.dependencies]
either = { version = "1.15.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0.17"
claim = "0.5.0"
itertools = "0.14.0"
