[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = {version = "0.9.2", optional = true }

[dev-dependencies]
claim = { workspace = true }
itertools = { workspace = true }
diol = { version = "0.8.3", default-features = false }

[features]
default = []
shuffle = ["rand"] # enables shuffling the deck

[[bench]]
name = "benchmarks"
harness = false