[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = {version = "0.9.2", optional = true }
ts-rs = { version = "11.1.0", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"
claim = { workspace = true }

diol = { version = "0.8.3", default-features = false }

[features]
default = ["shuffle"]
shuffle = ["dep:rand"] # enables shuffling the deck
ts = ["dep:ts-rs"] # enables exporting ts types

[[bench]]
name = "benchmarks"
harness = false
