[package]
name = "responses"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
game = { path = "../game", default-features = false }
ts-rs = { version = "11.1.0", optional = true }

[features]
ts = ["dep:ts-rs"] # enables exporting ts types