[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
game = { path = "../game" }
axum = { version = "0.8.6", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
tungstenite = "0.24"
claim = { workspace = true }
itertools = { workspace = true }

[[bin]]
name = "server"
path = "src/main.rs"
