[package]
name = "wasm-responses"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
game = { path = "../game", default-features = false }
responses = { path = "../responses" }
wasm-bindgen = "0.2.105"
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
